--- a/index.html
+++ b/index.html
@@ -6,33 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-    .azul
-    { color: blue;}
-    .rojo
-    {color: red;}
-    .verde
-    {color: green;}
-    .amarillo
-    {color: yellow;}
-    .morado
-    {color: purple;}
-    .cafe
-    {color: brown;}
-    .marron
-    {color:burlywood;}
-    .purpura
-    {color: firebrick;}
-    .crema
-    {color: navy;}
+    .azul { color: blue;}
+    .rojo {color: red;}
+    .verde {color: green;}
+    .amarillo {color: yellow;}
+    .morado {color: purple;}
+    .cafe {color: brown;}
+    .marron {color:burlywood;}
+    .purpura {color: firebrick;}
+    .crema {color: navy;}
     
     </style>
 </head>
 <body>
     
     <h1>Hola Mundo</h1>
+    <h2>Hola mundo</h2>
+    <h3>Hola mundo</h3>
+    <h4>Hola mundo</h4>
+    <h5>Hola mundo</h5>
+    <h6>Hola mundo</h6>
     <!---<h1 class="azul">H</h1><h1 class="rojo">o</h1><h1 class="verde">l</h1><h1 class="amarillo">a</h1>
     <h1 class="morado">m</h1><h1 class="cafe">u</h1><h1 class="marron">u</h1><h1 class="purpura">n</h1><h1 class="crema">d</h1><h1 class="plateado">o</h1>
     --->
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    Fugiat perspiciatis, ad porro reprehenderit cumque aliquam voluptatibus aperiam eum nemo. 
+    Placeat ducimus quaerat explicabo, modi dolore quo! Dolore vero mollitia animi!Autem a debitis odit fugiat, corporis ad? Voluptate, sunt sequi veniam, ipsum sapiente minima aperiam autem error possimus fuga dolore cum quae accusantium dolor.
+    Accusamus sunt libero mollitia molestias in.</p>
+
+    <center>
+    <img src="img/siuuu.jfif" alt="Pikas" width="50%" height="50%">
+    </center>
+    <br>
+    <a href="www.google.com">Google</a>
+    <a href="www.youtube.com">Youtu</a>
 
 </body>
 </html>
