lo nuevo 4 de octubre 2019

--- a/feis2.html
+++ b/feis2.html
@@ -38,5 +38,9 @@
     <div>
         <img src="img/face.png" alt="Mundo">
     </div>
+
+    <h1>Abre tu cuenta</h1>
+
+    <input type="text" placeholder="Nombre">
 </body>
 </html>
