--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <a href="cuadrito.html">Cuadricula</a>
     <a href="feis2.html">Facebook</a>
-    <a href="aver.html">Facebook prueba</a>
+    <a href="num2.html">Facebook prueba</a>
     <h1>Hola Mundo</h1>
     <h2>Hola mundo</h2>
     <h3>Hola mundo</h3>
