--- a/num2.html
+++ b/num2.html
@@ -52,7 +52,8 @@
                 <input type="radio">Masculino <b><b></b></b><input type="radio">Femenino 
         </li>
         <br>
-        <button  class="butn">Crear  cuenta</button>
+        <li><input type="submit" value="Crear Cuenta"></li>
+        </div>
             </div>
             
             </div>
